// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildTimelinePrompt > matches the golden baseline prompt with no activity timeline and no template 1`] = `
"You are writing the resolution work note for an IT support ticket, based on a timeline of observed on-screen actions.
Write the work note as a bullet-point list of the actions performed.
Rules:
- One action per bullet, in the order it occurred. Every line must start with "- ".
- Use impersonal, passive past tense. Never name a person or role -- do not write "the engineer", "the technician", "the IT support engineer", "I", or "the user". Begin each bullet directly with the action verb (e.g. "Searched...", "Opened...", "Ran...", "Confirmed...").
- Do not include any date or time.
- Describe only what is directly evidenced -- do not infer problems, causes, or intentions that aren't shown.
- Omit incidental details (browser/OS notifications, prompts unrelated to the work, the screen-recording tool itself) unless clearly part of the work performed.
- Never repeat passwords, API keys, tokens, or other credentials verbatim; refer to them generically (e.g. "entered a password").
- Never describe masked or redacted fields as "obscured," "hidden," "blurred," or otherwise implying the value was partially visible -- describe only that the field was present and filled in (e.g. "entered values into the Password and Username fields"), since the underlying value was never seen.
- Before writing bullets, group all observations that describe the same underlying action, window, or UI state into a single bullet. Only start a new bullet when the user has moved to a genuinely different action, window, or step -- do not produce multiple bullets that redescribe one moment from slightly different angles.
Return only the bullet list -- no heading, no preamble, no closing sentence.

Observed actions:
1. Opened the HaloPSA ticket list.
2. Searched for the affected user account.

Work note:"
`;

exports[`buildTimelinePrompt > matches the golden prompt with an activity timeline and a template 1`] = `
"You are writing the resolution work note for an IT support ticket, based on a timeline of observed on-screen actions, plus an activity timeline of the tools used.
Write the work note as a bullet-point list of the actions performed.
Rules:
- One action per bullet, in the order it occurred. Every line must start with "- ".
- Use impersonal, passive past tense. Never name a person or role -- do not write "the engineer", "the technician", "the IT support engineer", "I", or "the user". Begin each bullet directly with the action verb (e.g. "Searched...", "Opened...", "Ran...", "Confirmed...").
- Do not include any date or time.
- Describe only what is directly evidenced -- do not infer problems, causes, or intentions that aren't shown.
- Omit incidental details (browser/OS notifications, prompts unrelated to the work, the screen-recording tool itself) unless clearly part of the work performed.
- Never repeat passwords, API keys, tokens, or other credentials verbatim; refer to them generically (e.g. "entered a password").
- Never describe masked or redacted fields as "obscured," "hidden," "blurred," or otherwise implying the value was partially visible -- describe only that the field was present and filled in (e.g. "entered values into the Password and Username fields"), since the underlying value was never seen.
- Before writing bullets, group all observations that describe the same underlying action, window, or UI state into a single bullet. Only start a new bullet when the user has moved to a genuinely different action, window, or step -- do not produce multiple bullets that redescribe one moment from slightly different angles.
Return only the bullet list -- no heading, no preamble, no closing sentence.

Additional instructions for this summary (apply these on top of the rules above -- if anything here conflicts with the rules above, the rules above win):
Keep it terse.

Observed actions:
1. Opened the HaloPSA ticket list.
2. Searched for the affected user account.

Activity timeline:
1. Focused HaloPSA for 4m12s
2. Visited portal.azure.com

Work note:"
`;

exports[`summaryInstructions > matches the golden baseline rules text when no template is set 1`] = `
"Write the work note as a bullet-point list of the actions performed.
Rules:
- One action per bullet, in the order it occurred. Every line must start with "- ".
- Use impersonal, passive past tense. Never name a person or role -- do not write "the engineer", "the technician", "the IT support engineer", "I", or "the user". Begin each bullet directly with the action verb (e.g. "Searched...", "Opened...", "Ran...", "Confirmed...").
- Do not include any date or time.
- Describe only what is directly evidenced -- do not infer problems, causes, or intentions that aren't shown.
- Omit incidental details (browser/OS notifications, prompts unrelated to the work, the screen-recording tool itself) unless clearly part of the work performed.
- Never repeat passwords, API keys, tokens, or other credentials verbatim; refer to them generically (e.g. "entered a password").
- Never describe masked or redacted fields as "obscured," "hidden," "blurred," or otherwise implying the value was partially visible -- describe only that the field was present and filled in (e.g. "entered values into the Password and Username fields"), since the underlying value was never seen.
- Before writing bullets, group all observations that describe the same underlying action, window, or UI state into a single bullet. Only start a new bullet when the user has moved to a genuinely different action, window, or step -- do not produce multiple bullets that redescribe one moment from slightly different angles.
Return only the bullet list -- no heading, no preamble, no closing sentence."
`;

exports[`summaryInstructions > matches the golden baseline-plus-template text when a template is set 1`] = `
"Write the work note as a bullet-point list of the actions performed.
Rules:
- One action per bullet, in the order it occurred. Every line must start with "- ".
- Use impersonal, passive past tense. Never name a person or role -- do not write "the engineer", "the technician", "the IT support engineer", "I", or "the user". Begin each bullet directly with the action verb (e.g. "Searched...", "Opened...", "Ran...", "Confirmed...").
- Do not include any date or time.
- Describe only what is directly evidenced -- do not infer problems, causes, or intentions that aren't shown.
- Omit incidental details (browser/OS notifications, prompts unrelated to the work, the screen-recording tool itself) unless clearly part of the work performed.
- Never repeat passwords, API keys, tokens, or other credentials verbatim; refer to them generically (e.g. "entered a password").
- Never describe masked or redacted fields as "obscured," "hidden," "blurred," or otherwise implying the value was partially visible -- describe only that the field was present and filled in (e.g. "entered values into the Password and Username fields"), since the underlying value was never seen.
- Before writing bullets, group all observations that describe the same underlying action, window, or UI state into a single bullet. Only start a new bullet when the user has moved to a genuinely different action, window, or step -- do not produce multiple bullets that redescribe one moment from slightly different angles.
Return only the bullet list -- no heading, no preamble, no closing sentence.

Additional instructions for this summary (apply these on top of the rules above -- if anything here conflicts with the rules above, the rules above win):
Organise the actions under headings: Diagnosis, Steps taken, Resolution."
`;
